add dockerfile & docker compose
